--- a/package.json
+++ b/package.json
@@ -3,13 +3,18 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "@toolpad/core": "^0.12.0",
     "axios": "^1.7.9",
+    "bootstrap": "^5.3.3",
     "cra-template": "1.2.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-ecommerce": "file:",
     "react-router-dom": "^7.1.5",
     "react-scripts": "5.0.1",
+    "semver": "^7.7.1",
     "web-vitals": "^4.2.4"
   },
   "scripts": {
