--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "antd": "^5.24.5",
     "axios": "^1.7.9",
     "bootstrap": "^5.3.3",
+    "chart.js": "^4.4.9",
     "cra-template": "1.2.0",
     "react": "^19.0.0",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.0.0",
     "react-ecommerce": "file:",
     "react-icons": "^5.5.0",
